# cde2310_custom_robot_stack

./: .gitattributes  README.md  package.xml  setup.cfg  setup.py
Documentation/: CLI_real_autonomous_system.md  CLI_testing_system.md  README.md
Documentation/Elec_Docs/: README.md
Documentation/Mech_Docs/: README.md
Documentation/Software_Docs/: Overall_Software_Architecture.md  README.md  auto_nav.md  docking_&_OpenCV_implementation.md  firmware_&_launching_logics.md
Mech_Docs/: README.md
Software_Docs/: Overall_Software_Architecture.md
cde2310_custom_robot_stack/: approach_nav_node.py  docking_node.py  dynamic_launch_clearance_node.py  dynamic_launcher_hw_node.py  frontier_node.py  launching_node.py  launching_pi_node.py  marker_mapper_node.py  marker_watcher_node.py  station_id_node.py  stationary_launcher_hw_node.py  supervisor_node.py  timing_gauge_node.py
config/: camera_calib_640x480.npz  nav2_params_final.yaml
launch/: dock_only.launch.py  explore_only.launch.py  pi_dynamic_launcher.launch.py  pi_launcher.launch.py  pi_stationary_launcher.launch.py  system.launch.py
testing_codes/: camera_calibration.py  pose_estimation_tester.py
